TEST_PROGRAMS/INVALID/09/nested_blockcomment.go
/*
	/* Nested block comment */
*/
package main
